--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -3,7 +3,7 @@
     <style name="color_button">
         <item name="android:layout_width">40dp</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:background">#E7E4E3</item>
+        <item name="android:background">#ebebeb</item>
         <item name="android:layout_marginStart">16dp</item>
         <item name="android:layout_marginTop">12dp</item>
         <item name="android:onClick">onClickListener</item>
