--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,4 +8,15 @@
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:onClick">onClickListener</item>
     </style>
+    
+    <style name="choose_color_transparent">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
 </resources>
