--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#ff9ea1</color>
     <color name="colorPrimaryDark">#ff8588</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="transparent">#66000000</color>
 </resources>
