--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,10 +6,10 @@
         <item name="android:background">#ebebeb</item>
         <item name="android:layout_marginStart">10dp</item>
         <item name="android:layout_marginTop">10dp</item>
-        <item name="android:onClick">onClickListener</item>
+        <item name="android:onClick">onColorButtonClick</item>
     </style>
     
-    <style name="choose_color_transparent">
+    <style name="color_selection_transparent">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
