--- a/app/src/main/res/layout/color_item.xml
+++ b/app/src/main/res/layout/color_item.xml
@@ -6,12 +6,8 @@
 
     <TextView
         android:id="@+id/item_textview"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="#0af1c7"
-        android:gravity="center"
-        android:textColor="#696b6b"
-        android:textSize="30sp"
+        style="@style/color_selection"
+        android:background="@drawable/item_button_shape"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
     </TextView>
