--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,6 +8,15 @@
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:onClick">onColorButtonClick</item>
     </style>
+
+    <style name="color_selection">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:background">#0af1c7</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#696b6b</item>
+        <item name="android:textSize">30sp</item>
+    </style>
     
     <style name="color_selection_transparent">
         <item name="android:windowBackground">@android:color/transparent</item>
