--- a/app/src/main/res/drawable/item_button_shape.xml
+++ b/app/src/main/res/drawable/item_button_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#0af1c7" />
+<!--    <solid android:color="@color/design_default_color_secondary"/>-->
     <corners
         android:topLeftRadius="15dp"
         android:topRightRadius="15dp"
