--- a/app/src/main/res/layout/activity_color_selection.xml
+++ b/app/src/main/res/layout/activity_color_selection.xml
@@ -22,6 +22,7 @@
             android:id="@+id/main_listview"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:gravity="center"
             android:orientation="horizontal" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
