--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -12,9 +12,9 @@
     <style name="color_selection">
         <item name="android:layout_width">150dp</item>
         <item name="android:layout_height">150dp</item>
-        <item name="android:background">#0af1c7</item>
-        <item name="android:textColor">#696b6b</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">@color/design_default_color_on_secondary</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:onClick">getEachItemColors</item>
     </style>
     
     <style name="color_selection_transparent">
