Add Floating Action Button on Color Selection Activity

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -12,12 +12,11 @@
     <style name="color_selection">
         <item name="android:layout_width">150dp</item>
         <item name="android:layout_height">150dp</item>
-        <item name="android:textColor">@color/design_default_color_on_secondary</item>
+        <item name="android:textColor">@color/design_default_color_on_primary</item>
         <item name="android:textSize">20dp</item>
-        <item name="android:onClick">getEachItemColors</item>
     </style>
     
-    <style name="color_selection_transparent">
+    <style name="color_selection_transparent" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
