--- a/app/src/main/res/layout/activity_color_selection.xml
+++ b/app/src/main/res/layout/activity_color_selection.xml
@@ -56,7 +56,7 @@
                 android:layout_gravity="bottom|end"
                 android:layout_margin="16dp"
                 app:srcCompat="@android:drawable/ic_menu_edit"
-                app:backgroundTint="@android:color/white"
+                app:backgroundTint="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
