--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:hint="제목을 입력하세요"
+            android:hint="@string/hint_diary_title"
             android:textColor="#737373"
             android:textSize="20sp" />
 
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:gravity="start|top"
-            android:hint="일기를 입력하세요"
+            android:hint="@string/hint_diary_contents"
             android:textColor="#737373"
             android:inputType="textMultiLine" />
 
